# CMAKE_NEW_PROJECT

./: CMakeLists.txt  README.md
cmake/: project_name.cmake
